Prevented background image wrapping

--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,7 @@ body {
   height: 580px;
   max-width: 500px;
   margin: 20px auto;
+  overflow: hidden;
   display: block;
   cursor: default;
   background-image: linear-gradient(-225deg, #7085b6 0%, #87a7d9 90%);
@@ -210,9 +211,11 @@ hr {
   border: none;
 }
 #code-by {
-  color: white;
-  position: relative;
-  bottom: 0;
+  position: fixed;
+  top: 600px;
+  left: 440px;
+  color: palevioletred;
+  text-shadow: none;
 }
 /* button hover message*/
 #location-message {
